# GNURadio-examples-lee

./: README.md  README.txt  api.h  cc_handle.cc  cc_handle.h  cc_handle_impl.cc  cc_handle_impl.h  ettus_latency_b210.tar
ettus-latency/: ettus timing results.xlsx  responder  responder.cpp  responder_org  usrp2_lat_setup.sh  ~$ettus timing results.xlsx
fp3/: gnulatency.tar
fp3/ettus_latency/: CMakeLists.txt  csg_responder_v2.cpp  csg_responder_v3.cpp  graph.py  responder.cpp  responder.cpp~
fp3/gr-csg/: dial_tone.py  fm_tx4.py  tx_simple.py  untitled.grc
fp3/gr-csg/gr-fp/gr-fpgnu/docs/: README.fpgnu
fp3/gr-csg/gr-fp/gr-fpgnu/grc/: CMakeLists.txt  fpgnu_fp_CandC.xml  fpgnu_fp_CandC.xml~  fpgnu_fpdata_sink.xml  fpgnu_fpdata_sink.xml~  fpgnu_fpdata_source.xml  fpgnu_fpdata_source.xml~
fp3/gr-csg/gr-fp/gr-fpgnu/lib/: CMakeLists.txt  fp_CandC_impl.cc  fp_CandC_impl.cc~  fp_CandC_impl.h  fpdata_sink_impl.cc  fpdata_sink_impl.cc~  fpdata_sink_impl.h  fpdata_sink_impl.h~  qa_fp_CandC.cc  (+11 more)
fp3/gr-csg/gr-fp/grc_testfp/: gr_fpdata.grc  gr_fpdata_fd.grc  gr_fpdata_nofile.grc  top_block.py  top_block.py~
fp3/gr-csg/grc/: test_B210RX.grc  test_B210_tx.grc  test_rx.grc  test_rx_tx.grc  test_tx.grc  test_udp_latency.grc  top_block.py
fp3/gr-csg/grc/test_block/gr-testmod/lib/: CMakeLists.txt  qa_testmod.cc  qa_testmod.h  square2_ff_impl.cc  square2_ff_impl.cc~  square2_ff_impl.h  square_ff_impl.cc  square_ff_impl.cc~  square_ff_impl.h  square_ff_impl.h~  square_ff_org  test_testmod.cc
fp3/gr-csg/uhd_apps/: benchmark_rx.py  benchmark_tx.py  transmit_path.py  tx_voice.py
fp3/orginal/ettus-latency/: csg_responder_v1.cpp  ettus timing results.xlsx  latency-stats.id_USRP2_r4_rate_4000000-spb_64-spp_363.txt  run_tests.py
gr-fp_2_1_13/: gr_modtool.py
gr-fp_2_1_13/gr-fpgnu/: CMakeLists.txt
gr-fp_2_1_13/gr-fpgnu/docs/doxygen/: Doxyfile.in
gr-fp_2_1_13/gr-fpgnu/grc/: CMakeLists.txt  fpgnu_fpdata_sink.xml  fpgnu_fpdata_sink.xml~
gr-fp_2_1_13/gr-fpgnu/include/fpgnu/: CMakeLists.txt  fpdata_sink.h
gr-fp_2_1_13/gr-fpgnu/lib/: CMakeLists.txt  fpdata_sink_impl.cc  fpdata_sink_impl.cc~  fpdata_sink_impl.h  qa_fpdata_sink.cc  qa_fpdata_sink.h  qa_fpgnu.cc
gr-fp_2_1_13/gr-fpgnu/python/: CMakeLists.txt  qa_fpgnu.py~  temp_qa_fpgnu.py  top_block.py  top_block.sh  top_block.sh~
gr-fp_2_1_13/gr-fpgnu/swig/: fpgnu_swig.i
gr-fp_2_1_13/grc_testfp/: gr_fpdata.grc  top_block.py
gr-modtool/: qa_+projectname+.py  qa_fpgnu.py  readme.txt
(+34 files in other folders)
